Advanced_Feature/3.13_GRPCRoute_Mirror/3.12_GRPCRoute_Modifiers/gw-grpc-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: http-gw
  namespace: web
spec:
  gatewayClassName: f5-bnk-gateway-class

  addresses:
    - type: IPAddress
      value: 40.30.20.20

  listeners:
    - name: bnk-listener
      protocol: HTTP
      port: 80

      allowedRoutes:
        namespaces:
          from: All

        kinds:
          - kind: GRPCRoute

---
apiVersion: gateway.networking.k8s.io/v1
kind: GRPCRoute
metadata:
  name: grpc-modifier-route
  namespace: web
spec:
  parentRefs:
    - name: http-gw
      sectionName: bnk-listener

  hostnames:
    - grpc.f5bnk.com

  rules:
    - filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            add:
              - name: X-PoC-Add
                value: added
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            add:
              - name: X-PoC-Res-Add
                value: added

      backendRefs:
        - name: coffee-pool
          kind: Pool
          group: k8s.f5net.com
